mir/src/snapshots/transmute_mir__tests__main_with_free_statements.snap
---
source: mir/src/lib.rs
expression: make_mir(hir)
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "only functions are allowed at top level",
                span: 1:16; [15, 25],
                level: Error,
                generated_at: (
                    "mir/src/lib.rs",
                    70,
                ),
            },
        ],
    },
)
