mir/src/snapshots/transmute_mir__tests__main_without_free_statements.snap
---
source: mir/src/lib.rs
expression: make_mir(hir)
---
Ok(
    Mir {
        functions: [
            Function {
                identifier: Identifier {
                    id: IdentId(0),
                    span: 1:5; [4, 8],
                },
                symbol_id: SymbolId(18),
                parameters: [],
                variables: {},
                body: ExprId(0),
                ret: TypeId(1),
            },
        ],
        structs: [],
        identifiers: [
            "main",
            "add",
            "boolean",
            "div",
            "eq",
            "ge",
            "gt",
            "le",
            "lt",
            "mul",
            "neg",
            "neq",
            "number",
            "print",
            "sub",
            "void",
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Block(
                    [],
                ),
                span: 1:12; [11, 13],
                type_id: TypeId(1),
            },
        ],
        statements: [],
        symbols: [
            Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            Symbol {
                id: SymbolId(1),
                kind: NativeType(
                    IdentId(15),
                    Void,
                ),
                type_id: TypeId(2),
            },
            Symbol {
                id: SymbolId(2),
                kind: NativeType(
                    IdentId(12),
                    Number,
                ),
                type_id: TypeId(2),
            },
            Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(2),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            Symbol {
                id: SymbolId(4),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
            },
            Symbol {
                id: SymbolId(5),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                    ],
                    TypeId(1),
                    PrintNumber,
                ),
                type_id: TypeId(6),
            },
            Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
            },
            Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(4),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(4),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(3),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
            },
            Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(1),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
            },
            Symbol {
                id: SymbolId(18),
                kind: LetFn(
                    StmtId(0),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(10),
            },
        ],
        types: [
            Void,
            None,
            Boolean,
            Number,
            Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            Function(
                [
                    TypeId(4),
                ],
                TypeId(1),
            ),
            Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            Function(
                [],
                TypeId(1),
            ),
        ],
    },
)
